load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "git.dillonliang.cn/micro-svc/pledge/src/base/book/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//library/logger:go_default_library",
        "//src/base/book/api:go_default_library",
        "//src/base/book/config:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
